<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background">

    <FrameLayout
        android:id="@+id/login_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Logowanie"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorBlueLink"/>


            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:layout_toStartOf="@+id/imageViewGoogleSignIn"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:textColorHint="@android:color/darker_gray"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editTextPassword"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="Hasło"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"/>


            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPassword"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorBlue"
                app:cornerRadius = "20dp"
                android:text="Login" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:text="Nie pamiętam hasła"
                android:textColor="@color/colorBlue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="Nie masz jeszcze konta? Zarejestruj się"
                android:textColor="@color/colorBlueLink" />


            <TextView
                android:id="@+id/textViewOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewRegister"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:text="lub zaloguj się za pomocą"
                android:padding="8dp" />


            <ImageView
                android:id="@+id/imageViewGoogleSignIn"
                android:layout_width="210dp"
                android:layout_height="48dp"
                android:layout_below="@id/textViewOr"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_google"
                android:clickable="true"
                android:layout_gravity="center"
                android:onClick="onGoogleSignInClick"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewGoogleSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewOr"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true"
                app:cardCornerRadius="8dp">
                <!-- Content inside the CardView, such as TextViews, ImageViews, etc. -->

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
