...
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="20dp"
        android:textSize="16sp"
        android:textColor="@color/colorBlue"
        app:layout_constraintTop_toBottomOf="@id/INRTitle"
        app:layout_constraintBottom_toTopOf="@id/editTextValue"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextValue"
        android:textColor="@color/colorBlue"
...
        app:cornerRadius = "20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextValue"
        app:layout_constraintBottom_toBottomOf="@id/dialogEditBox"
        app:layout_constraintEnd_toStartOf="@id/buttonSave"/>

    <Button
        android:backgroundTint="@color/colorBlue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/buttonSave"
...
